--- a/teste-mvc-webapp/teste-mvc-webapp.csproj
+++ b/teste-mvc-webapp/teste-mvc-webapp.csproj
@@ -1,10 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>teste_mvc_webapp</RootNamespace>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0"/>
+    <PackageReference Include="Dapper.SimpleCRUD" Version="1.11.0"/>
+    <PackageReference Include="Dapper.SimpleCRUD.ModelGenerator" Version="1.0.2"/>
+  </ItemGroup>
 </Project>
